# TempFox

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.dev  MIGRATION.md  Makefile  README.md  TODO.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  tempfox.py  uninstall.ps1  uninstall.sh
.github/workflows/: docker.yml  python-package.yml
docs/: codex-hygiene-runbook.md  project-context.md
docs/plans/: 2026-02-16-todo-roadmap-implementation.md
scripts/: repo_hygiene_check.sh  run_tool.sh
tempfox/: aws_profiles.py  cloudfox.py  core.py  dependencies.py
tests/: __init__.py  test_aws_profiles.py  test_cloudfox.py  test_core.py  test_dependencies.py
